--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Dhaneshwar|Portfolio</title>
-		<link rel="icon" type="image/png" href="images/me.png" />
+		<title>YogaGuru</title>
+		<!-- <link rel="icon" type="image/png" href="images/me.png" /> -->
 		<meta name="title" content="Portfolio | Dhaneshwar Marskole" />
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
@@ -104,7 +104,7 @@
 							<!-- <div class="logo-img">
 								<img src="./images/meprofifle.png" alt="" />
 							</div> -->
-							<p>*Dhaneshwar <span></span></p
+							<p>YogaGuru <span></span></p
 						></a>
 					</div>
 					<div class="center-btn-area">
@@ -1993,10 +1993,10 @@
 		<section class="footer-section">
 			<div class="footer-col">
 				<div class="copyright-area mobile-text-center">
-					<p style="display: inline-block; margin:auto; nowrap; width: 100%;">
+					<p style="display: inline-block; margin:auto; width: 100%;">
 						© 2024 Created & Developed by Dhaneshwar <br />
 						All copy right reserved.
-						<span style="font-size: 10px">Its just Formality.(:-</span>
+						<span style="font-size: 10px">Its just Formality.:-</span>
 					</p>
 					<div class="links">
 						<a target="_blank" href="https://github.com/Dhaneshwar7">
