--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				<div class="row">
 					<div class="col-md-12 landing-left-text">
 						<h2>
-							<span class="landing-fade-up-item">Dhaneshwar</span>
+							<span class="landing-fade-up-item">YogaGuru</span>
 							<span class="platinum-color landing-fade-up-item">Marskole</span>
 							<br />
 							<span class="landing-fade-up-item">MERN STACK Developer</span>
