--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 								target="_blank"
 								href="./images/Dhaneshwar-MERN.pdf"
 								class="button-look get-started"
-								>Resume 📄</a
+								>Login</a
 							>
 						</div>
 						<div class="side-menu">
