--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
 								target="_blank"
 								href="./images/Dhaneshwar-MERN.pdf"
 								class="button-look get-started"
-								>Resume 📄</a
+								>Login</a
 							>
 						</div>
 						<div class="nav-phone-number">
 							<p>Contact for more information</p>
-							<a href="tel:+917247629743">(+91)724-762-9743</a>
+							<a href="tel:+917247629743">+91 92653*****</a>
 						</div>
 						<div class="nav-social-media">
 							<a href="https://github.com/Dhaneshwar7" target="_blank">
