--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 							<span class="landing-fade-up-item">YogaGuru</span>
 							<span class="platinum-color landing-fade-up-item">Marskole</span>
 							<br />
-							<span class="landing-fade-up-item">MERN STACK Developer</span>
+							<span class="landing-fade-up-item">Your Path To Wellness Starts Here</span>
 						</h2>
 						<p class="mobile-text-center landing-fade-up-item">
 							“My work matters.”
